--- a/Piano3D/Piano3D.vcxproj
+++ b/Piano3D/Piano3D.vcxproj
@@ -89,12 +89,12 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Libs\Boost; $(SolutionDir)..\Libs\DirectXMesh;$(SolutionDir)..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\Libs\Boost; $(SolutionDir)..\..\..\Libs\DirectXMesh; $(SolutionDir)..\..\..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Lib\$(PlatformTarget); $(SolutionDir)..\Libs\DirectXTK\$(Configuration); $(SolutionDir)..\Libs\DirectXMesh\$(Configuration);</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Lib\$(PlatformTarget); $(SolutionDir)..\..\..\Libs\DirectXTK\$(Configuration); $(SolutionDir)..\..\..\Libs\DirectXMesh\$(Configuration);</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -119,14 +119,14 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Libs\Boost; $(SolutionDir)..\Libs\DirectXMesh;$(SolutionDir)..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\Libs\Boost; $(SolutionDir)..\..\..\Libs\DirectXMesh; $(SolutionDir)..\..\..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Lib\$(PlatformTarget); $(SolutionDir)..\Libs\DirectXTK\$(Configuration); $(SolutionDir)..\Libs\DirectXMesh\$(Configuration);</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Lib\$(PlatformTarget); $(SolutionDir)..\..\..\Libs\DirectXTK\$(Configuration); $(SolutionDir)..\..\..\Libs\DirectXMesh\$(Configuration);</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -150,13 +150,10 @@
     <ClInclude Include="BackBuffer2D.h" />
     <ClInclude Include="Batch.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="CanvasGdi.h" />
     <ClInclude Include="DxError.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="Frame.h" />
     <ClInclude Include="Geometry.h" />
-    <ClInclude Include="FontGdi.h" />
-    <ClInclude Include="BufferLocker.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="Resource.h" />
@@ -164,6 +161,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Text.h" />
     <ClInclude Include="WinClass.h" />
     <ClInclude Include="WinMessages.h" />
   </ItemGroup>
@@ -182,6 +180,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Text.cpp" />
     <ClCompile Include="WinClass.cpp" />
     <ClCompile Include="WinMessages.cpp" />
   </ItemGroup>
