--- a/Piano3D/Piano3D.vcxproj
+++ b/Piano3D/Piano3D.vcxproj
@@ -77,7 +77,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir); $(SolutionDir)..\..\..\Libs\Boost; $(SolutionDir)..\..\..\Libs\DirectXMesh; $(SolutionDir)..\..\..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include; C:\Program Files (x86)\Visual Leak Detector\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir); $(SolutionDir)..\..\PianoModel\PianoFingering\; $(SolutionDir)..\..\..\Libs\Boost; $(SolutionDir)..\..\..\Libs\DirectXMesh; $(SolutionDir)..\..\..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include; C:\Program Files (x86)\Visual Leak Detector\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -108,7 +108,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir); $(SolutionDir)..\..\..\Libs\Boost; $(SolutionDir)..\..\..\Libs\DirectXMesh; $(SolutionDir)..\..\..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include; C:\Program Files (x86)\Visual Leak Detector\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir); $(SolutionDir)..\..\PianoModel\PianoFingering\; $(SolutionDir)..\..\..\Libs\Boost; $(SolutionDir)..\..\..\Libs\DirectXMesh; $(SolutionDir)..\..\..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include; C:\Program Files (x86)\Visual Leak Detector\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -144,8 +144,11 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="Frame.h" />
+    <ClInclude Include="FramesPerSec.h" />
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="KeyStates.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="RenderData.h" />
     <ClInclude Include="Render_pimpl.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceLoader.h" />
@@ -158,9 +161,12 @@
     <ClCompile Include="BackBuffer2D.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Device.cpp" />
+    <ClCompile Include="FramesPerSec.cpp" />
     <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="KeyStates.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Render.cpp" />
+    <ClCompile Include="RenderData.cpp" />
     <ClCompile Include="Render_pimpl.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -173,7 +179,8 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resource\Desk.png" />
-    <Image Include="Resource\Font.png" />
+    <Image Include="Resource\FingersLeft.png" />
+    <Image Include="Resource\FingersRight.png" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Piano3D.rc" />
