--- a/TestRun/TestRun.vcxproj
+++ b/TestRun/TestRun.vcxproj
@@ -95,7 +95,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\..\..\Libs\DirectXTK\$(Configuration); $(SolutionDir)..\..\..\Libs\DirectXMesh\$(Configuration);</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files (x86)\Visual Leak Detector\lib\$(Platform);$(SolutionDir)Piano3D\$(Configuration);$(SolutionDir)..\..\..\Libs\DirectXTK\$(Configuration);$(SolutionDir)..\..\..\Libs\DirectXMesh\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalDependencies>$(SolutionDir)Piano3D\$(Configuration)\Piano3D.res; %(AdditionalDependencies)</AdditionalDependencies>
       <AssemblyLinkResource>
       </AssemblyLinkResource>
@@ -103,7 +103,8 @@
       </EmbedManagedResourceFile>
     </Link>
     <ResourceCompile>
-      <AdditionalIncludeDirectories>$(SolutionDir)Piano3D\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -135,7 +136,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\..\..\Libs\DirectXTK\$(Configuration); $(SolutionDir)..\..\..\Libs\DirectXMesh\$(Configuration);</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files (x86)\Visual Leak Detector\lib\$(Platform);$(SolutionDir)Piano3D\$(Configuration);$(SolutionDir)..\..\..\Libs\DirectXTK\$(Configuration);$(SolutionDir)..\..\..\Libs\DirectXMesh\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalDependencies>$(SolutionDir)Piano3D\$(Configuration)\Piano3D.res; %(AdditionalDependencies)</AdditionalDependencies>
       <AssemblyLinkResource>
       </AssemblyLinkResource>
@@ -143,7 +144,8 @@
       </EmbedManagedResourceFile>
     </Link>
     <ResourceCompile>
-      <AdditionalIncludeDirectories>$(SolutionDir)Piano3D\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
