--- a/Piano3D/Piano3D.vcxproj
+++ b/Piano3D/Piano3D.vcxproj
@@ -77,13 +77,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir); $(SolutionDir)..\..\PianoModel\PianoFingering\; $(SolutionDir)..\..\..\Libs\Boost; $(SolutionDir)..\..\..\Libs\DirectXMesh; $(SolutionDir)..\..\..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include; C:\Program Files (x86)\Visual Leak Detector\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir);$(SolutionDir)..\..\PianoModel\PianoFingering\;$(CppLibs)Boost;$(CppLibs)DirectXMesh;$(CppLibs)DirectXTK;$(DXSDK_DIR)Include;C:\Program Files (x86)\Visual Leak Detector\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>$(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Lib\$(PlatformTarget); $(SolutionDir)..\..\..\Libs\DirectXTK\$(Configuration); $(SolutionDir)..\..\..\Libs\DirectXMesh\$(Configuration); C:\Program Files (x86)\Visual Leak Detector\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(DXSDK_DIR)Lib\$(PlatformTarget); $(CppLibs)DirectXTK\$(Configuration); $(CppLibs)DirectXMesh\$(Configuration); C:\Program Files (x86)\Visual Leak Detector\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <TargetMachine>MachineX86</TargetMachine>
     </Lib>
   </ItemDefinitionGroup>
@@ -108,7 +108,8 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir); $(SolutionDir)..\..\PianoModel\PianoFingering\; $(SolutionDir)..\..\..\Libs\Boost; $(SolutionDir)..\..\..\Libs\DirectXMesh; $(SolutionDir)..\..\..\Libs\DirectXTK; $(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Include; C:\Program Files (x86)\Visual Leak Detector\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir);$(SolutionDir)..\..\PianoModel\PianoFingering\;$(CppLibs)Boost;$(CppLibs)DirectXMesh;$(CppLibs)DirectXTK;$(DXSDK_DIR)Include;C:\Program Files (x86)\Visual Leak Detector\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -116,7 +117,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>$(ProgramFiles)\Microsoft DirectX SDK (June 2010)\Lib\$(PlatformTarget); $(SolutionDir)..\..\..\Libs\DirectXTK\$(Configuration); $(SolutionDir)..\..\..\Libs\DirectXMesh\$(Configuration); C:\Program Files (x86)\Visual Leak Detector\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(DXSDK_DIR)Lib\$(PlatformTarget); $(CppLibs)DirectXTK\$(Configuration); $(CppLibs)DirectXMesh\$(Configuration); C:\Program Files (x86)\Visual Leak Detector\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <TargetMachine>MachineX86</TargetMachine>
     </Lib>
   </ItemDefinitionGroup>
@@ -161,6 +162,7 @@
     <ClCompile Include="BackBuffer2D.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Device.cpp" />
+    <ClCompile Include="DxError.cpp" />
     <ClCompile Include="FramesPerSec.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="KeyStates.cpp" />
