--- a/Piano3D/Piano3D.vcxproj
+++ b/Piano3D/Piano3D.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Frame.h" />
     <ClInclude Include="FramesPerSec.h" />
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="Geometry_pimpl.h" />
     <ClInclude Include="KeyStates.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="RenderData.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="FramesPerSec.cpp" />
     <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="Geometry_pimpl.cpp" />
     <ClCompile Include="KeyStates.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Render.cpp" />
