--- a/Piano3D/Piano3D.vcxproj.filters
+++ b/Piano3D/Piano3D.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files\DirectX\Geometry</Filter>
     </ClInclude>
+    <ClInclude Include="Geometry_pimpl.h">
+      <Filter>Header Files\DirectX\Geometry</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -144,6 +147,9 @@
       <Filter>Source Files\DirectX\Utilities</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
+      <Filter>Source Files\DirectX\Geometry</Filter>
+    </ClCompile>
+    <ClCompile Include="Geometry_pimpl.cpp">
       <Filter>Source Files\DirectX\Geometry</Filter>
     </ClCompile>
   </ItemGroup>
