--- a/Piano3D/Piano3D_project_suppressions.cfg
+++ b/Piano3D/Piano3D_project_suppressions.cfg
@@ -1,5 +1,6 @@
 [cppcheck]
 noConstructor:*KeyStates.cpp:13
 initializerList:*Mesh.h:45
+initializerList:*Mesh.h:47
 [cppcheck_files]
 [cppcheck_includes]
